--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
+    "react-day-picker": "^8.10.1",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
@@ -64,6 +65,11 @@
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.8"
+  },
+  "overrides": {
+    "react-day-picker": {
+      "date-fns": "^3.6.0"
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
